footer margin fix, stretch main height

--- a/styles/blocks.css
+++ b/styles/blocks.css
@@ -16,6 +16,7 @@
     padding-top: 15px;
     padding-bottom: 60px;
     background-color: rgb(0, 0, 0);
+    min-height: 75vh;
 }
 
 /* Multi-column layout */
