--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 0;
+    margin-bottom: 0;
     width: 100%;
     justify-content: center;
     align-items: center;
